<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgrounds"
    tools:context=".Activities.MainActivity">

    <ProgressBar
        android:id="@+id/reg_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="3dp"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Register"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@color/backgrounds"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter your full name"
                        android:inputType="textPersonName"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@color/backgrounds"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_user_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter your address"
                        android:inputType="textPostalAddress" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@color/backgrounds"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter your phone number "
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@color/backgrounds"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_meeting_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="Enter your email here"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@color/backgrounds"
                    android:padding="10dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText


                        android:id="@+id/reg_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter your password"
                        android:imeActionLabel="Password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>





            <Button
                android:id="@+id/reg_user_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:padding="20dp"
                android:text="Register"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:background="@color/colorPrimary"/>

            <TextView
                android:id="@+id/reg_sing_in_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already have an account? Sign in now"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>